# Plex-Organizer

./: .gitignore  .sonarcloud.properties  DEVELOPMENT.md  FAQ.md  README.md  audio.py  audio_stream.py  config.ini  config.py  const.py  dataclass.py  fetch_subs.py  ffmpeg_utils.py  generate_indexes.py  indexing.py  install.sh  log.py  movie.py  plex.py  plex_organizer.py  pyproject.toml  qb.py  qb_cleanup.sh  qb_delete.sh  qb_organizer.py  requirements.txt  run.sh  sonar-project.properties  subtitles.py  sync_subs.py  test.bat  test.sh  tv.py  update.sh  utils.py  whisper_detector.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/copilot-rules/: cleanup-safety.md  code-conventions.md  configuration.md  ffmpeg-usage.md  imports.md  indexing.md  release-notes.md  testing.md  validation.md
.github/workflows/: codeql.yml  pylint.yml  scripts.yml  sonarcloud.yml
.sonarlint/: connectedMode.json
plex_organizer/: __init__.py  __main__.py  _paths.py  cli_generate_indexes.py  config.py  const.py  ffmpeg_utils.py  indexing.py  log.py  manage.py  movie.py  organizer.py  paths.py  pipeline.py  qb.py  radarr.py  sonarr.py  tv.py  utils.py
plex_organizer/audio/: __init__.py  tagging.py  whisper.py
plex_organizer/cli/: generate_indexes.py  kill.py  setup.py
plex_organizer/subs/: __init__.py  embedding.py  fetching.py  syncing.py
release/: v1.0.md  v1.1.md  v1.2.md  v1.3.md  v2.0.md  v3.0.md  v3.1.md  v4.0.md  v5.0.md  v6.0.md  v6.1.md
tests/: conftest.py  test_config.py  test_const.py  test_dataclass.py  test_ffmpeg_utils.py  test_indexing.py  test_log.py  test_main.py  test_manage.py  test_movie.py  test_organizer.py  test_paths.py  test_qb.py  test_radarr.py  test_sonarr.py  test_tv.py  test_utils.py
tests/audio/: test_audio_tagging.py  test_audio_whisper.py
tests/cli/: test_cli_generate_indexes.py  test_cli_kill.py  test_cli_setup.py
tests/subs/: test_subs_embedding.py  test_subs_embedding_ops.py  test_subs_fetching.py  (+1 more)
(+30 files in other folders)
